name:                gamenumber-freegame
version:             0.0.1
synopsis:            simple game
description:         GameNumber is simple game with AI players
license:             GPL-3
license-file:        LICENSE
author:              Evgeny Pashkin
maintainer:          epashkin@cognitive.ru
copyright:           (C) 2014 Evgeny Pashkin
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable gamenumber-freegame
  main-is:             Main.hs
  build-depends:       base >=4.6,
                       gamenumber,
                       mtl,
                       cond,
                       lens,
                       free,
                       free-game
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded

source-repository head
  type: git
  location: git://github.com/EPashkin/gamenumber-freegame.git
